fix: opacity improved,  data is more visible now

--- a/src/components/users/Search.css
+++ b/src/components/users/Search.css
@@ -2,7 +2,7 @@
   width: 100%;
   padding: 5%;
   border-radius: 10px;
-  background: rgba(255, 255, 255, 0.6);
+  background: rgba(255, 255, 255, 0.7);
   backdrop-filter: blur(7px);
 }
 
