--- a/src/components/users/User.css
+++ b/src/components/users/User.css
@@ -1,6 +1,6 @@
 .User {
   border-radius: 10px;
-  background: rgba(255, 255, 255, 0.6);
+  background: rgba(255, 255, 255, 0.7);
   backdrop-filter: blur(7px);
   padding: 1rem;
   width: 100%;
