--- a/src/components/users/UserItem.css
+++ b/src/components/users/UserItem.css
@@ -4,7 +4,7 @@
   text-align: center;
   border: none;
   border-radius: 10px;
-  background: rgba(255, 255, 255, 0.6);
+  background: rgba(255, 255, 255, 7);
   backdrop-filter: blur(7px);
 }
 
